Parser.cpp: implemented parsing for sqrt encompassing single numbers and simple expressions. Main.cpp: implemented conditional check for reading sqrt command.
calculator.cpp implemented squareRoot function, to calculate square roots.

updated comments.

NOTE:: THERE'S A BUG WITH STORING HISTORY FOR SQUARE ROOTS FIX TMRW!!!!

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@
 c_cpp_properties.json
 launch.json
 settings.json
+.vs/ProjectSettings.json
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/calculator/FileContentIndex/db47fdac-bdeb-468e-8ac9-0d802c3c9f38.vsidx
+.vs/calculator/v17/.wsuo
+.vs/calculator/v17/DocumentLayout.json
+.vs/calculator/v17/Browse.VC.db
+.vs/calculator/v17/Solution.VC.db
+.vs/calculator/v17/ipch/AutoPCH/477d9c1d2e80aae3/MAIN.ipch
+.vs/calculator/v17/ipch/AutoPCH/c2ffd97c6842eae6/VCTMP11588_729452.MAIN.00000000.ipch
+.vs/slnx.sqlite
