Implement function usePriorAnswer, identified by '@' symbol then using the line index provided by user to pull the result from history_log vector

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ settings.json
 .vs/calculator/v17/ipch/AutoPCH/477d9c1d2e80aae3/MAIN.ipch
 .vs/calculator/v17/ipch/AutoPCH/c2ffd97c6842eae6/VCTMP11588_729452.MAIN.00000000.ipch
 .vs/slnx.sqlite
+.vscode/settings.json
