START NEW IMPLEMENTATION:
-Original calculator was becoming messy, I also reached my goal with the original CLI calculator.

-Using Shunting Yard Algorithim within my parser, consists of functions 'tokenizeExpression' and 'convertToPostfix'

-Takes infix notation and reorders it into RPN.

NOTE:

-Implement RPN evaluation, within calculations.cpp

-Implement/expand UI capabilities wihtin ui.cpp

-Implement history functionality within history_,manager.cpp

-manually handle basic word commands, ie 'help', 'exit', 'menu'

-Build GUI interface.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,8 +8,9 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "${workspaceFolder}/src/main.cpp",
-                "${workspaceFolder}/src/calculator.cpp",
-                "${workspaceFolder}/src/history.cpp",
+                "${workspaceFolder}/src/ui.cpp",
+                "${workspaceFolder}/src/calculations.cpp",
+                "${workspaceFolder}/src/history_manager.cpp",
                 "${workspaceFolder}/src/parser.cpp",
                 "-o",
                 "${workspaceFolder}/main.exe"
