Main.cpp: updating comments, entering binary conversion functionality into main function.
parser.cpp: Updating comments.

base_conversion: implement get_base_info() to filter the input for provided functions.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,7 @@
                 "${workspaceFolder}/src/calculations.cpp",
                 "${workspaceFolder}/src/history_manager.cpp",
                 "${workspaceFolder}/src/parser.cpp",
+                "${workspaceFolder}/src/base_conversion.cpp",
                 "-o",
                 "${workspaceFolder}/main.exe"
             ],
