--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,9 @@
     "streambuf": "cpp",
     "text_encoding": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "map": "cpp",
+    "fstream": "cpp",
+    "iomanip": "cpp"
   }
 }
